--- a/.github/workflows/automation-tests.yml
+++ b/.github/workflows/automation-tests.yml
@@ -10,13 +10,17 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
+    - name: Set up python
+      uses: actions/setup-pyhton@v2
       with:
-        node-version: '14'
+        pyhton-version: '3.12.7'
 
     - name: Install dependencies
-      run: npm install
+      run: |
+             pyhton -m pip install -upgrade pip
+             pip install selenium
 
     - name: Run tests
-      run: npm test
+      run: | 
+         Python -m unittest discover -s tests
+         
